# ansible-role-collect-logs

./: .ansible-lint  .envrc  .gitignore  .gitreview  .pre-commit-config.yaml  MANIFEST.in  README.rst  ansible.cfg  bindep.txt  galaxy.yml  requirements.txt  requirements.yml  setup.cfg  setup.py  test-requirements.txt  tox.ini
defaults/: main.yml
docs/: doc-requirements.txt
docs/source/: conf.py
docs/static/: env-setup-virt.rst
docs/static/baremetal-overcloud/: copying-customized-files.rst  customizing-external-network-vlan.rst  customizing-undercloud-conf.rst  env-setup.rst  env-specific-pre-deploy-steps.rst  environment-settings-structure.rst  introduction.rst  networking.rst  requirements.rst  virtual-vs-baremetal-undercloud.rst
docs/static/ovb-openstack-cloud/: calling-quickstart.rst  introduction.rst  running-quickstart-instances-openstack.rst
files/: collect-container-logs.sh
filter_plugins/: flatten_nested_dict.py
infrared_plugin/: main.yml  plugin.spec
module_utils/: sova_lib.py
molecule/default/: converge.yml  molecule.yml  playbook.yml  verify.yml
molecule/infrared/: cleanup.yml  converge.yml  molecule.yml  playbook.yml  verify.yml
molecule/sova/: molecule.yml  playbook.yml  prepare.yml  verify.yml
plugins/module_utils/: sova_lib.py  test_utils.py
plugins/modules/: ara_graphite.py  ara_influxdb.py  flatten_nested_dict.py  sova.py
roles/collect_logs/: library
roles/collect_logs/defaults/: main.yml
roles/collect_logs/files/: collect-container-logs.sh  consolidate-avc.pl  heat-deploy-times.py
roles/collect_logs/meta/: main.yml
roles/collect_logs/module_utils/: sova_lib.py
roles/collect_logs/molecule/default/: converge.yml  molecule.yml  prepare.yml  verify.yml
roles/collect_logs/molecule/infrared/: converge.yml  molecule.yml  verify.yml
roles/collect_logs/molecule/sova/: converge.yml  molecule.yml  prepare.yml  verify.yml
roles/collect_logs/tasks/: collect.yml  create-docs.yml  main.yml  publish.yml  publish_ara.yml  publish_ara_influxdb.yml  sanitize_log_strings.yaml  sova.yml
roles/collect_logs/tasks/collect/: container.yml  network.yml  system.yml
roles/collect_logs/templates/: index.rst.j2  rsync-filter.j2
roles/collect_logs/vars/: family-redhat.yml  sova-patterns.yml  unsecure.yml
tasks/: ara_graphite.yml  ara_influxdb.yml  collect.yml  create-docs.yml  main.yml  publish.yml  publish_ara_graphite.yml  sova.yml
tasks/collect/: container.yml  monitoring.yml  network.yml  openstack.yml  system.yml
test-playbooks/: zuul-ansible-role-collect-logs.yaml
tests/: test_flatten_nested_dict.py
tests/common/: utils.py
tests/sanity/: ignore-2.10.txt
tests/unit/: requirements.txt  test_flatten_nested_dict.py  test_sova.py
vars/: infrared-collect-exclude-list.yml  sova-patterns.yml
zuul.d/: layout.yaml
zuul.d/playbooks/: pre.yml
