[metadata]
name = ansible-role-collect-logs
summary = ansible-role-collect-logs - An Ansible role for aggregating logs from different nodes.
description-file =
    README.rst
author = TripleO Team
author-email = openstack-discuss@lists.openstack.org
home-page = https://opendev.org/openstack/ansible-role-collect-logs
classifier =
  License :: OSI Approved :: Apache Software License
  Development Status :: 4 - Beta
  Intended Audience :: Developers
  Intended Audience :: System Administrators
  Intended Audience :: Information Technology
  Topic :: Utilities

[global]
setup-hooks =
    pbr.hooks.setup_hook

[files]
# Allows us to install the role using pip so Ansible can find it.
data_files =
    share/ansible/roles/collect-logs = roles/collect_logs/*
    share/ansible/roles/collect-logs/library = plugins/modules/*
    share/ansible/roles/collect-logs/module_utils = plugins/module_utils/*
    share/ansible/roles/collect-logs/docs = docs/*

[wheel]
universal = 1

[pbr]
skip_authors = True
skip_changelog = True

[flake8]
# E123, E125 skipped as they are invalid PEP-8.
# E265 deals with spaces inside of comments
show-source = True
ignore = E123,E125,E265
builtins = _
