[metadata]
name = ansible-role-collect-logs
summary = ansible-role-collect-logs - An Ansible role for aggregating logs from different nodes.
description_file =
    README.rst
author = TripleO Team
author_email = openstack-discuss@lists.openstack.org
home_page = https://opendev.org/openstack/ansible-role-collect-logs
classifier =
  License :: OSI Approved :: Apache Software License
  Development Status :: 4 - Beta
  Intended Audience :: Developers
  Intended Audience :: System Administrators
  Intended Audience :: Information Technology
  Topic :: Utilities

[global]
setup_hooks =
    pbr.hooks.setup_hook

[files]
# Allows us to install the role using pip so Ansible can find it.
data_files =
    share/ansible/roles/collect-logs = roles/collect_logs/*
    share/ansible/roles/collect-logs/library = plugins/modules/*
    share/ansible/roles/collect-logs/module_utils = plugins/module_utils/*
    share/ansible/roles/collect-logs/docs = docs/*

[wheel]
universal = 1

[pbr]
skip_authors = True
skip_changelog = True

[flake8]
# black compatible settings
# https://black.readthedocs.io/en/stable/the_black_code_style.html
max_line_length = 88
extend_ignore = E203,E501,W503,BLK100
show_source = True
builtins = _

[isort]
profile=black
